@@ -1,5 +1,9 @@
 2006-08-15  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
+    * olive.glade: added View menu
+    * olive/frontend/gtk/handler.py: implement the signal handlers
+    * olive/frontend/gtk/__init__.py: connect the signals
+    * TODO: some items marked as [DONE]
     * icons/olive-gtk.png: added application icon
     * olive-gtk.desktop: added desktop entry
     * setup.py: modified respectively
